# Standalone workspace: keeps the tendermint-rs / ics23 dependency tree out of
# the main dregg workspace (like `chain/`, `solana-lock/`, and `eth-lightclient/`).
# This crate is the INBOUND Cosmos/IBC foreign-chain verifier — it verifies a
# *Cosmos* Tendermint SignedHeader (>= 2/3 stake-weighted voting power over the
# commit) and an ICS-23 (iavl + tendermint) membership proof against the header's
# app_hash. It is NOT part of dregg's own soundness TCB, so the audited reference
# libraries every Cosmos/IBC client uses (tendermint-light-client-verifier, ics23)
# are the correct and safe choice here — the same discipline as blst for ETH BLS.
#
# Folded into the root workspace (members, NOT default-members — the tendermint-rs /
# ics23 tree stays out of the bare dev loop, built via `-p cosmos-lightclient`).
[package]
name = "cosmos-lightclient"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Inbound Cosmos/IBC light-client verify core: Tendermint SignedHeader (>=2/3 voting power) verification + ICS-23 (iavl+tendermint) membership proof verification against the header app_hash"

[dependencies]
# tendermint-rs 0.40.4 — the audited Tendermint types + the informalsystems
# light-client verification algorithm (validator-set hash binding, >= 2/3 voting
# power over the commit, trust-threshold / trusting-period / monotonic-time
# rules). This is the exact verifier ibc-rs and Hermes use. Version PINNED.
# `rust-crypto` (default) gives the real Ed25519 commit-signature verification +
# the SHA-256 validator-set / header hashing, and the `ProdVerifier`.
tendermint = { version = "=0.40.4", default-features = false, features = ["rust-crypto"] }
tendermint-light-client-verifier = "=0.40.4"
# ics23 0.12.0 — the CosmWasm/ibc-rs Merkle-proof verification library implementing
# the Cosmos ICS-23 spec (iavl + tendermint proof ops). `host-functions` (default)
# provides the real SHA-256/etc hashers via `HostFunctionsManager`. Version PINNED.
ics23 = "=0.12.0"
# prost 0.13 — matches ics23's protobuf runtime; used to decode the raw
# `CommitmentProof` bytes an ABCI query returns into `ics23::CommitmentProof`,
# and the legacy (SDK < 0.46) protobuf `sdk.Coin` bank-balance value.
prost = "0.13"
# sha2 0.10 — already in the tree via tendermint's rust-crypto; used for the
# denom -> 32-byte asset-id commitment (IBC denoms exceed 32 bytes, so a hash).
sha2 = "0.10"

[dev-dependencies]
# Deserialize the genuine cosmoshub-4 RPC fixtures (SignedHeader / validator set).
serde_json = "1"
# Encode a legacy protobuf `sdk.Coin` value in the bank-balance reject tests.
prost = "0.13"
# Decode the base64 the ABCI query encodes proof ops / values as.
base64 = "0.22"
# Decode the app_hash hex.
hex = "0.4"

[lints]
workspace = true
