[package]
name = "dregg-credentials"
version.workspace = true
edition.workspace = true
description = "Dregg credential primitives — issue, present, verify, and revoke verifiable credentials, lifted from bridge::present (G31)."

# This crate is the promotion of `bridge::present` + `macaroon` into a dedicated
# credential surface, as called out in `DREGG-FLAWS-FROM-APPS.md` G31. It wraps
# the BridgePresentationBuilder pipeline with a documented credential-shaped API
# (`Credential`, `Presentation`, `RevocationProof`, `PredicateRequest`,
# `issue` / `present` / `verify` / `revoke`) so apps (identity, subscription,
# any KYC-shaped flow) can reach for one well-paved API instead of reinventing
# `Credential { ..., /* no signature */ }` as `apps/identity/` did.

[dependencies]
dregg-bridge = { path = "../bridge" }
dregg-circuit = { path = "../circuit" }
dregg-cell = { path = "../cell", default-features = false }
dregg-commit = { path = "../commit" }
dregg-token = { path = "../token", default-features = false, features = ["macaroon", "rand-deps"] }
dregg-trace = { path = "../trace" }
dregg-macaroon = { path = "../macaroon" }

blake3 = "1"
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
dregg-bridge = { path = "../bridge", features = ["test-utils"] }

[lints]
workspace = true
