[package]
name = "crypto-hermine"
version = "0.1.0"
edition = "2021"
description = "Spec-faithful REFERENCE implementation of the Hermine lattice threshold signature, pinned to the Lean spec in metatheory/Dregg2/Crypto/{HermineThreshold,HermineExtractor}.lean. Trusted dealer, reference PRNG (no CSPRNG, not constant-time), realistic-ward params (n=64, Dilithium prime), NOT deployment-grade."
license = "AGPL-3.0-only"
publish = false

# Standalone: opt out of the breadstuffs root workspace (staged reference
# work — deliberately NOT a member; builds in its own dir).
[workspace]

[dependencies]
# Intentionally none: the reference is pure module algebra over R_q, and the
# deterministic sampling/challenge helpers are toy (documented at the seam).
