[package]
name = "dregg-deco-prove"
version.workspace = true
edition.workspace = true
description = "The DECO/zkTLS Stripe money-in PROVER: given disclosed Stripe payment facts + a (notary-attested) TLS-transcript commitment, produce a DecoPaymentAttestation carrying a genuine STARK proof over the deployed DECO leaf AIR that dregg-bridge::verify_deco_payment accepts. Complements the already-landed verifier + Lean crown; the last missing crypto leg of trustless money-in. The MPC-TLS/notary capture layer is the NAMED interim (see docs/deos/DECO-PROVER-STATUS.md)."

[dependencies]
# The felt-domain canonical encoder (stripe_payment_hash_felt / the PaymentFacts
# projection) — the ONE anchor the leaf, the producer, and the executor share.
dregg-circuit = { path = "../circuit" }
# The heavy recursion prover: the DECO leaf adapter (prove_deco_leaf_with_claim),
# the leaf-proof (de)serialization teeth, and ir2_leaf_wrap_config.
dregg-circuit-prove = { path = "../circuit-prove" }
# DecoPaymentAttestation + the verifier this prover must satisfy.
dregg-bridge = { path = "../bridge" }
dregg-types = { path = "../types" }
# The interim NOTARY attestation over the TLS-transcript commitment: a real
# ed25519 signature (the SAME curve/lib as the bridge's off-AIR §8 carrier). NOT
# MPC-TLS — the named trust boundary (docs/deos/DECO-PROVER-STATUS.md).
ed25519-dalek = { version = "2", features = ["std"] }
sha2 = { workspace = true }
serde = { version = "1", features = ["derive"] }

# ─────────────────────────────────────────────────────────────────────────────
# `tlsn-live` — the REAL MPC-TLS integration (git-pinned TLSNotary @ v0.1.0-alpha.15,
# rev 47aee45b53e06648c1b2ad3689b367b8c923fdec). This is a heavy optional CRYPTO
# BACKEND (the `mpz` 2PC/garbling stack + tokio + rustls) gated behind a BUILD
# feature so the default build stays light. It is NOT a runtime toggle — the
# no-reflexive-features rule targets runtime choices; an optional heavy backend
# behind a build feature is the sanctioned use. With the feature OFF nothing here
# is compiled (deco-prove default = the modeled adapter + the STARK core only).
#
# The crates are pulled by git; tlsn is a path-based workspace, so depending on
# `tlsn`/`tlsn-formats`/`tlsn-server-fixture-certs` transitively resolves the whole
# tlsn tree (+ the mpz alpha.6 2PC crates) at the pinned rev.
tlsn = { git = "https://github.com/tlsnotary/tlsn", rev = "47aee45b53e06648c1b2ad3689b367b8c923fdec", optional = true }
tlsn-formats = { git = "https://github.com/tlsnotary/tlsn", rev = "47aee45b53e06648c1b2ad3689b367b8c923fdec", optional = true }
tlsn-server-fixture-certs = { git = "https://github.com/tlsnotary/tlsn", rev = "47aee45b53e06648c1b2ad3689b367b8c923fdec", optional = true }
# The local test HTTPS server + the async runtime the MPC-TLS session runs on.
tokio = { version = "1.38", features = ["rt", "rt-multi-thread", "macros", "sync", "io-util", "net", "time"], optional = true }
futures = { version = "0.3", optional = true }
futures-rustls = { version = "0.25", optional = true }
hyper = { version = "1.1", features = ["client", "server", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["full"], optional = true }
http-body-util = { version = "0.1", optional = true }
tokio-util = { version = "0.7", features = ["compat", "io"], optional = true }
k256 = { version = "0.13", features = ["ecdsa"], optional = true }
bincode = { version = "1.3", optional = true }
anyhow = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[features]
tlsn-live = [
    "dep:tlsn",
    "dep:tlsn-formats",
    "dep:tlsn-server-fixture-certs",
    "dep:tokio",
    "dep:futures",
    "dep:futures-rustls",
    "dep:hyper",
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:tokio-util",
    "dep:k256",
    "dep:bincode",
    "dep:anyhow",
    "dep:serde_json",
]

[dev-dependencies]
# The RAM mint path (mint_against_deco / live_supply bookkeeping) is a bridge
# test-utils surface; enable it so the e2e round-trip can assert conservation.
dregg-bridge = { path = "../bridge", features = ["test-utils"] }

[lints]
workspace = true
